# ava-streamlit-app

./: Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: app-service-docker.yml
app/: .env  auth_utils.py  config.py  fast_api_example.py  main.py  style.css
app/.streamlit/: config.toml
app/page/: chat.py  product_knowledge.py
